[gd_scene load_steps=17 format=2]

[ext_resource path="res://Fonts/Boxy-Bold-Font/Boxy-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/FutilePro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/ArrowSpritesFrame.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Menu.gd" type="Script" id=4]
[ext_resource path="res://platform_metroidvania asset pack v1.01/tiles and background_foreground/background.png" type="Texture" id=5]
[ext_resource path="res://Music/awesomeness.ogg" type="AudioStream" id=6]
[ext_resource path="res://platform_metroidvania asset pack v1.01/Sign Panel.png" type="Texture" id=7]
[ext_resource path="res://Fonts/MatchupPro.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Flags/cat.png" type="Texture" id=9]
[ext_resource path="res://ConfirmationDialogue.gd" type="Script" id=10]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;


uniform float speed;


void fragment () {
	COLOR = texture(TEXTURE, vec2(UV.x + TIME * speed, UV.y));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/speed = 0.1

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 8 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -108.0
margin_right = 192.0
margin_bottom = 108.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 384.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 40 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][tornado radius=2.5 freq=2]DIARREO ADVENTURES[/tornado]"
text = "DIARREO ADVENTURES"
fit_content_height = true
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 384.0
margin_bottom = 180.0
custom_constants/separation = 6

[node name="ContinueLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_left = 104.0
margin_right = 280.0
margin_bottom = 14.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "string_continue_button"
align = 1
valign = 1

[node name="NewGameLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_left = 99.0
margin_top = 20.0
margin_right = 284.0
margin_bottom = 34.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "string_new_game_button"
align = 1
valign = 1

[node name="OptionsLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_left = 108.0
margin_top = 40.0
margin_right = 275.0
margin_bottom = 54.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "string_options_button"
align = 1
valign = 1

[node name="ExitLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_left = 122.0
margin_top = 60.0
margin_right = 262.0
margin_bottom = 74.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = "string_exit_button"
align = 1
valign = 1

[node name="Arrow" type="AnimatedSprite" parent="."]
position = Vector2( 150, 113.5 )
frames = ExtResource( 3 )
frame = 3
playing = true

[node name="OptionsMenu" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -45.0
margin_right = 73.0
margin_bottom = 45.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 32, 16 )
patch_margin_left = 9
patch_margin_top = 5
patch_margin_right = 8
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
margin_right = -5.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
margin_top = 7.0
margin_right = 175.0
margin_bottom = 20.0

[node name="LanguageLabel" type="Label" parent="OptionsMenu/VBoxContainer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 5 )
text = "string_language"
align = 1
valign = 1

[node name="TextureRect2" type="TextureRect" parent="OptionsMenu/VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 153.0
margin_bottom = 13.0
size_flags_horizontal = 3
expand = true
stretch_mode = 1

[node name="TextureRect" type="TextureRect" parent="OptionsMenu/VBoxContainer/HBoxContainer"]
margin_left = 157.0
margin_right = 175.0
margin_bottom = 13.0
texture = ExtResource( 9 )
stretch_mode = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
margin_top = 28.0
margin_right = 175.0
margin_bottom = 41.0

[node name="MusicLabel" type="Label" parent="OptionsMenu/VBoxContainer/HBoxContainer2"]
margin_right = 73.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 5 )
text = "string_music"
align = 1
valign = 1

[node name="TextureRect3" type="TextureRect" parent="OptionsMenu/VBoxContainer/HBoxContainer2"]
margin_left = 77.0
margin_right = 157.0
margin_bottom = 13.0
size_flags_horizontal = 3
expand = true
stretch_mode = 1

[node name="StateLabel" type="Label" parent="OptionsMenu/VBoxContainer/HBoxContainer2"]
margin_left = 161.0
margin_right = 175.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 5 )
text = "On"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="OptionsMenu/VBoxContainer"]
margin_top = 49.0
margin_right = 175.0
margin_bottom = 62.0

[node name="FullscreenLabel" type="Label" parent="OptionsMenu/VBoxContainer/HBoxContainer3"]
margin_right = 101.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 5 )
text = "string_fullscreen"
align = 1
valign = 1

[node name="TextureRect3" type="TextureRect" parent="OptionsMenu/VBoxContainer/HBoxContainer3"]
margin_left = 105.0
margin_right = 152.0
margin_bottom = 13.0
size_flags_horizontal = 3
expand = true
stretch_mode = 1

[node name="StateLabel" type="Label" parent="OptionsMenu/VBoxContainer/HBoxContainer3"]
margin_left = 156.0
margin_right = 175.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 5 )
text = "Off"
align = 1
valign = 1

[node name="BackLabel" type="Label" parent="OptionsMenu/VBoxContainer"]
margin_top = 70.0
margin_right = 175.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 5 )
text = "string_back"
align = 1
valign = 1

[node name="Arrow" type="AnimatedSprite" parent="OptionsMenu"]
position = Vector2( 150, 113.5 )
frames = ExtResource( 3 )
frame = 4
playing = true

[node name="ConfirmationDialogue" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -34.0
margin_right = 86.0
margin_bottom = 34.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 32, 16 )
patch_margin_left = 9
patch_margin_top = 5
patch_margin_right = 8
patch_margin_bottom = 5
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationDialogue"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ConfirmationDialogue/VBoxContainer"]
margin_right = 162.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 6 )
text = "string_erase_data"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationDialogue/VBoxContainer"]
margin_top = 33.0
margin_right = 162.0
margin_bottom = 46.0
custom_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="ConfirmationDialogue/VBoxContainer/HBoxContainer"]
margin_left = 31.0
margin_right = 92.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 6 )
text = "string_yes"
align = 1
valign = 1

[node name="Label2" type="Label" parent="ConfirmationDialogue/VBoxContainer/HBoxContainer"]
margin_left = 117.0
margin_right = 131.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 6 )
text = "No"
align = 1
valign = 1

[node name="Arrow" type="AnimatedSprite" parent="ConfirmationDialogue"]
frames = ExtResource( 3 )
frame = 2
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="show_confirmation_dialogue" from="." to="ConfirmationDialogue" method="_on_Menu_show_confirmation_dialogue"]
[connection signal="resized" from="VBoxContainer/VBoxContainer/ContinueLabel" to="." method="_on_ContinueLabel_resized"]
[connection signal="resized" from="VBoxContainer/VBoxContainer/NewGameLabel" to="." method="_on_NewGameLabel_resized"]
[connection signal="closed" from="ConfirmationDialogue" to="." method="_on_ConfirmationDialogue_closed"]
[connection signal="start_new_game" from="ConfirmationDialogue" to="." method="_on_ConfirmationDialogue_start_new_game"]
[connection signal="resized" from="ConfirmationDialogue/VBoxContainer/HBoxContainer/Label" to="ConfirmationDialogue" method="_on_Label_resized"]
